[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "qe_tools"
dist-name = "qe-tools"
author = ""
author-email = ""
home-page = "https://github.com/wright-group/"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.7"
requires = [
  "numpy",
  "toml",
  "WrightTools",
  "pathlib"
]

[tool.flit.scripts]

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
